--- a/src/main.ui
+++ b/src/main.ui
@@ -2,6 +2,7 @@
 <!-- Generated with glade 3.36.0 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
+  <requires lib="libhandy" version="0.0"/>
   <object class="GtkAboutDialog" id="aboutDialog">
     <property name="can_focus">False</property>
     <property name="type_hint">dialog</property>
@@ -109,13 +110,11 @@
       </object>
     </child>
     <child type="titlebar">
-      <object class="GtkHeaderBar" id="header_bar">
+      <object class="HdyHeaderBar">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="title">QuickEncrypt</property>
-        <property name="show_close_button">True</property>
         <child>
-          <object class="GtkButton" id="encryptButton">
+          <object class="GtkButton">
             <property name="label" translatable="yes">Encrypt</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
@@ -123,7 +122,7 @@
           </object>
         </child>
         <child>
-          <object class="GtkButton" id="decryptButton">
+          <object class="GtkButton">
             <property name="label" translatable="yes">Decrypt</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
@@ -134,12 +133,11 @@
           </packing>
         </child>
         <child>
-          <object class="GtkMenuButton" id="menuButton">
+          <object class="GtkMenuButton">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="focus_on_click">False</property>
             <property name="receives_default">True</property>
-            <property name="popover">popover1</property>
             <child>
               <placeholder/>
             </child>
